2006-09-08  Sven Neumann  <sven@gimp.org>

	* app/core/gimp.[ch]: added function gimp_get_tool_info().

	* app/actions/tools-commands.c
	* app/actions/vectors-commands.c
	* app/tools/gimppainttool.c
	* app/widgets/gimpdrawabletreeview.c
	* app/widgets/gimpselectioneditor.c
	* app/widgets/gimptoolbox.c: use the new function instead of poking
	into gimp->tool_info_list.

	* app/display/gimpdisplayshell-callbacks.c
	* app/display/gimpdisplayshell.[ch]: moved code that deals with
	the space key into separate functions. Added space_shaded_tool
	to GimpDisplayShell instead of using a static variable for it.

	* app/tools/tool_manager.c: removed unused include.

2006-09-08  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpwidgets-utils.c: mark "Space" and "Backslash"
	for translation (using the same translation context as in GTK+).

2006-09-08  Hans Breuer  <hans@breuer.org>

	* **/makefile.msc app/gimpcore.def : updated
	
	* app/paint/gimpperspectiveclone.c : error C2057: expected constant 
	expression. Stack allocation of dynamic sized arrays is afaik a GCC
	extension, use g_alloca() instead.

2006-09-08  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpperspectiveclonetool.c
	(gimp_perspective_clone_tool_register): fix the tool's menu path
	and accelerator.

2006-09-07  Jakub Steiner <jimmac@ximian.com>

	* stock-tool-perspective-clone*png: add the element of perspective
	in. Perhaps needs a bit of work on the anti-aliasing still.

2006-09-07  Michael Natterer  <mitch@gimp.org>

	Merged the "soc-2006-perspective-clone" branch. That branch is
	now officially closed and all further fixes and changes have to
	be applied to HEAD.

	Did some minor adjustments, mostly small indentation and spacing
	fixes. Derive the tool from GimpBrushTool and renamed the enum
	added to paint-enums.h and it values, added stock icon and menu
	entry.

	Thanks a lot to Pedro Alonso Ferrer!

	* app/paint/paint-enums.[ch]: new enum GimpPerspectiveCloneMode.

	* app/paint/Makefile.am