@@ -67,6 +67,7 @@ struct _GimpDisplayConfig
   GimpDisplayOptions *default_view;
   GimpDisplayOptions *default_fullscreen_view;
   gboolean            activate_on_focus;
+  GimpSpaceBarAction  space_bar_action;
 };
 
 struct _GimpDisplayConfigClass
